feat: validar se crm existe na api cmf (mockada com wiremock)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
+
+
+integrations.cfm.base-url=http://localhost:8089
+integrations.cfm.token=Bearer test
