--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,12 @@ services:
     volumes:
       - ./wiremock:/home/wiremock
     command: ["--verbose"]
+    
+  wiremock-agendamento:
+    image: wiremock/wiremock:3.5.4
+    container_name: wiremock-agendamento
+    ports:
+      - "8081:8081"
+    volumes:
+      - ./wiremock:/home/wiremock
+    command: [ "--verbose", "--global-response-templating", "--port", "8081" ]
