--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ logging.level.org.hibernate.SQL=DEBUG
 
 integrations.cfm.base-url=http://localhost:8089
 integrations.cfm.token=Bearer test
+integrations.agendamento.base-url=http://localhost:8081
