--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./wiremock:/home/wiremock
     command: ["--verbose"]
-    
+
   wiremock-agendamento:
     image: wiremock/wiremock:3.5.4
     container_name: wiremock-agendamento
@@ -15,4 +15,4 @@ services:
       - "8081:8081"
     volumes:
       - ./wiremock:/home/wiremock
-    command: [ "--verbose", "--global-response-templating", "--port", "8081" ]
+    command: [ "--verbose"]
